<?xml version="1.0" encoding="utf-8"?>

<resources>

  <!-- App specific, need to be overridden -->
  <string name="app_name">CameraController</string>
  <string name="launcher_label" translatable="false">CameraController</string>
  <string name="ok" translatable="false">Ok</string>
  <string name="cancel">Cancel</string>

  <!-- session -->
  <string name="focus">Focus</string>
  <string name="capture">Capture</string>
  <string name="continue_liveview">Continue</string>

  <!-- property grid -->
  <string name="af_label" translatable="false">AF</string>
  <string name="hide">Hide</string>

  <!-- menu -->
  <string name="menu_settings">Settings</string>
  <string name="menu_about">About</string>
  <string name="menu_help">Help</string>
  <string name="gallery">Gallery</string>
  <string name="session">Session</string>

  <!-- about dialog -->
  <string name="about_dialog_version" translatable="false">Version %1$s</string>
  <string name="about_dialog_copyright" translatable="false">Copyright \u00A9 2011 Nils Assbeck and Michael Z\u00F6ch</string>
  <string name="about_dialog_message">Camera Controller allows you to control your Canon DSLR camera via USB directly form your Android tablet.</string>

  <!-- feedback dialog -->
  <string name="feedback_dialog_title">Help us improve Camera Controller</string>
  <string name="feedback_dialog_message">Want to help improving Camera Controller? Then please give us feedback by sending us device information of your camera. Click the Ok button to open your preferred Email application.</string>

  <!-- no camera dialog -->
  <string name="dialog_no_camera_title">No camera found!</string>
  <string name="dialog_no_camera_message">No compatible Canon or Nikon camera found. Is your camera connected via USB?</string>

  <!-- changelog dialog -->
  <string name="whats_new">What\'s New</string>

  <!-- worker notification -->
  <string name="worker_ticker">Camera Controller is running</string>
  <string name="worker_content_title" translatable="false">@string/launcher_label</string>
  <string name="worker_content_text">Is running!</string>

  <!-- gallery -->
  <string name="gallery_reverse_sort_order">Reverse sort order</string>
  <string name="gallery_empty">No pictures found</string>
  <string name="gallery_loading">Loading ...</string>
  <string name="error_loading_image">Error loading image</string>
  <string name="gallery_no_camera_connected">No camera connected</string>

  <!-- settings -->
  <string name="activity_app_settings_title">Settings</string>
  <string name="pref_category_liveview_title" translatable="false">Live View</string>
  <string name="pref_captured_picture_duration_label">Show captured picture</string>
  <string name="pref_captured_picture_duration_summary">Seconds a captured picture is displayed during Live View</string>
  <string name="pref_category_picturestream_title" translatable="false">Picture Stream</string>
  <string name="pref_picturestream_num_pictures_label">Number of pictures</string>
  <string name="pref_picturestream_num_pictures_summary">Number of pictures to display in stream. Use lower number if memory is an issue.</string>
  <string name="pref_picturestream_show_filename_label">Filename</string>
  <string name="pref_picturestream_show_filename_summary">Show filename in bottom right corner</string>
  <string name="pref_category_memory_title">Memory constraints</string>
  <string name="pref_memory_picture_size_label">Picture size</string>
  <string name="pref_memory_picture_size_summary">Size of captured pictures in Live View and Gallery</string>
  <string name="dark_mode">Dark Theme</string>
  <string name="set_dark_mode">Switch to the Dark Theme</string>

  <!-- acra -->
  <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
  <string name="crash_notif_title">Camera Controller has crashed...</string>
  <string name="crash_notif_text">Please click here to help fix the issue.</string>
  <string name="crash_dialog_title">Camera Controller has crashed</string>
  <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click \'OK\'.</string>
  <string name="crash_dialog_comment_prompt">You might add your comments about the problem below or add your email address so we can contact:</string>
  <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="intervals">Int</string>
    <string name="amount_of_shots">Amount of Shots</string>
  <string name="period_between_shots">Period Between Shots</string>
    <string name="save_image_setting">Save images</string>
  <string name="save_img">Save images</string>
  <string name="save_img_sd">Save images on SD card</string>
    <string name="shot">Shot</string>

</resources>