<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/dark_mode">
    <SwitchPreference
        android:defaultValue="false"
        android:summary="@string/set_dark_mode"
        android:title="@string/set_dark_mode"
        android:key="dark_mode_switcher"
        />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_liveview_title">
    <ListPreference
      android:defaultValue="-1"
      android:entries="@array/captured_picture_duration_labels"
      android:entryValues="@array/captured_picture_duration_entries"
      android:key="liveview.captured_picture_duration"
      android:summary="@string/pref_captured_picture_duration_summary"
      android:title="@string/pref_captured_picture_duration_label"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_picturestream_title">
    <ListPreference
      android:defaultValue="6"
      android:entries="@array/picturestream_num_pictures_labels"
      android:entryValues="@array/picturestream_num_pictures_entries"
      android:key="picturestream.num_pictures"
      android:summary="@string/pref_picturestream_num_pictures_summary"
      android:title="@string/pref_picturestream_num_pictures_label"/>

    <CheckBoxPreference
      android:defaultValue="true"
      android:key="picturestream.show_filename"
      android:summary="@string/pref_picturestream_show_filename_summary"
      android:title="@string/pref_picturestream_show_filename_label"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_category_memory_title">
    <ListPreference
      android:defaultValue="2"
      android:entries="@array/memory_picture_size_labels"
      android:entryValues="@array/memory_picture_size_entries"
      android:key="memory.picture_sample_size"
      android:summary="@string/pref_memory_picture_size_summary"
      android:title="@string/pref_memory_picture_size_label"/>
  </PreferenceCategory>

</PreferenceScreen>