<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:padding="2dp">

  <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/about_dialog_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:srcCompat="@drawable/icon"/>

    <TextView
      android:id="@+id/about_dialog_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_toRightOf="@id/about_dialog_icon"
      android:text="@string/app_name"
      android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
      android:id="@+id/about_dialog_version"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@id/about_dialog_title"
      android:layout_below="@id/about_dialog_title"/>
  </RelativeLayout>

  <TextView
    android:id="@+id/about_dialog_copyright"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/about_dialog_copyright"/>

  <TextView
    android:id="@+id/about_dialog_message"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/about_dialog_message"/>

</LinearLayout>