<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/shotsAmountView"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/amount_of_shots"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/shotsAmount"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="187dp"
            android:layout_marginTop="0dp"
            android:inputType="numberSigned"
            android:textSize="10pt"
            android:text="1"/>

        <TextView
            android:id="@+id/periodOfShotsView"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:text="@string/period_between_shots"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/periodOfShots"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="238dp"
            android:layout_marginTop="42dp"
            android:inputType="numberSigned"
            android:textSize="10pt"
            android:text="0"/>

        <Button
            android:id="@+id/ButtonIntervals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ok"
            android:textSize="7pt"
            android:onClick="SetIntervalButtonClicked"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>